--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -24,3 +24,7 @@
 [[constraint]]
   branch = "master"
   name = "github.com/computes/go-debug"
+
+[[constraint]]
+  name = "github.com/computes/go-test-server"
+  version = "1.1.0"
